--- a/rozklad.css
+++ b/rozklad.css
@@ -56,3 +56,24 @@ th, td{
     border: 1px solid slategray;
     padding: 0.2rem;
 }
+
+h4{
+   color: gray; 
+}
+
+.red{
+    color: red;
+}
+/*<table width="200" border="1">
+<tr>
+<td rowspan="2">1</td>
+<td>2</td>
+</tr>
+<tr>
+<td>3</td>
+</tr>
+<tr align="center">
+<td><center>4</center></td>
+<td><center>5</center></td>
+</tr>
+</table>///
